syntax = "proto3";

package admin.service.v1;

import "gnostic/openapi/v3/annotations.proto";

import "google/api/annotations.proto";
import "google/api/field_behavior.proto";

import "google/protobuf/empty.proto";
import "google/protobuf/timestamp.proto";
import "google/protobuf/field_mask.proto";

import "permission/service/v1/menu.proto";

// Admin portal initialization data and configuration service
service AdminPortalService {
  // Get frontend navigation routes
  rpc GetNavigation (google.protobuf.Empty) returns (ListRouteResponse) {
    option (google.api.http) = {
      get: "/admin/v1/routes"
    };
  }

  // Get permission codes list
  rpc GetMyPermissionCode (google.protobuf.Empty) returns (ListPermissionCodeResponse) {
    option (google.api.http) = {
      get: "/admin/v1/perm-codes"
    };
  }

  // Get all context required for entering the admin portal in one request
  rpc GetInitialContext (google.protobuf.Empty) returns (InitialContextResponse) {
    option (google.api.http) = {
      get: "/admin/v1/initial-context"
    };
  }
}

// List routes - Response
message ListRouteResponse {
  repeated permission.service.v1.MenuRouteItem items = 1;
}

// List permission codes - Response
message ListPermissionCodeResponse {
  repeated string codes = 1;
}

message InitialContextResponse {
  repeated permission.service.v1.MenuRouteItem menus = 1;  // Menu tree
  repeated string permissions = 2;   // Permission codes
}
