syntax = "proto3";

package user.service.v1;

import "gnostic/openapi/v3/annotations.proto";
import "google/protobuf/empty.proto";
import "google/protobuf/timestamp.proto";
import "google/protobuf/field_mask.proto";

import "pagination/v1/pagination.proto";

// Membership association
message Membership {
  // Membership status
  enum Status {
    DISABLED = 0;   // Disabled (Admin manually banned the member's access to this tenant, e.g., resignation or suspension investigation.)
    ACTIVE = 1;     // Active (Member has normal access under this tenant and can switch/enter normally.)
    PENDING = 2;    // Pending review (User applied to join tenant, or was added by admin but not yet approved.)
    INVITED = 3;    // Pending acceptance (Tenant sent an invitation, but user has not accepted in their profile yet.)
    EXPIRED = 4;    // Expired (Member's tenure in this tenant has expired, commonly used for contractors or temporary project members.)
    REJECTED = 5;   // Rejected (Join request was rejected by tenant admin, or user declined the invitation.)
  }

  optional uint32 id = 1 [
    json_name = "id",
    (gnostic.openapi.v3.property) = { description: "ID" }
  ]; // ID

  optional uint32 user_id = 2 [
    json_name = "userId",
    (gnostic.openapi.v3.property) = { description: "User ID" }
  ]; // User ID

  optional uint32 tenant_id = 3 [
    json_name = "tenantId",
    (gnostic.openapi.v3.property) = { description: "Tenant ID" }
  ]; // Tenant ID

  optional bool is_primary = 4 [
    json_name = "isPrimary",
    (gnostic.openapi.v3.property) = {description: "Whether this is the primary identity"}
  ]; // Whether this is the primary identity

  optional Status status = 5 [
    (gnostic.openapi.v3.property) = {description: "Status"}
  ]; // Status

  optional google.protobuf.Timestamp assigned_at = 6 [
    json_name = "assignedAt",
    (gnostic.openapi.v3.property) = { description: "Assignment time (UTC)" }
  ];// Assignment time (UTC)
  optional uint32 assigned_by = 7 [
    json_name = "assignedBy",
    (gnostic.openapi.v3.property) = { description: "Assigner user ID" }
  ];

  optional google.protobuf.Timestamp joined_at = 8 [
    json_name = "joinedAt",
    (gnostic.openapi.v3.property) = { description: "Join time (UTC)" }
  ];// Join time (UTC)

  optional google.protobuf.Timestamp start_at = 9 [
    json_name = "startAt",
    (gnostic.openapi.v3.property) = {description: "Effective time"}
  ];// Effective time

  optional google.protobuf.Timestamp end_at = 10 [
    json_name = "endAt",
    (gnostic.openapi.v3.property) = {description: "Expiration time"}
  ];// Expiration time


  optional uint32 role_id = 20 [
    json_name = "roleId",
    (gnostic.openapi.v3.property) = { description: "Role ID" }
  ]; // Role ID
  repeated uint32 role_ids = 21 [
    json_name = "roleIds",
    (gnostic.openapi.v3.property) = { description: "Role IDs" }
  ]; // Role IDs

  optional uint32 position_id = 22 [
    json_name = "positionId",
    (gnostic.openapi.v3.property) = { description: "Position ID" }
  ]; // Position ID
  repeated uint32 position_ids = 23 [
    json_name = "positionIds",
    (gnostic.openapi.v3.property) = { description: "Position IDs" }
  ]; // Position IDs

  optional uint32 org_unit_id = 24 [
    json_name = "orgUnitId",
    (gnostic.openapi.v3.property) = { description: "Organization unit ID" }
  ]; // Organization unit ID
  repeated uint32 org_unit_ids = 25 [
    json_name = "orgUnitIds",
    (gnostic.openapi.v3.property) = { description: "Organization unit IDs" }
  ]; // Organization unit IDs

  optional uint32 created_by = 100 [json_name = "createdBy", (gnostic.openapi.v3.property) = {description: "Creator ID"}]; // Creator ID
  optional uint32 updated_by = 101 [json_name = "updatedBy", (gnostic.openapi.v3.property) = {description: "Updater ID"}]; // Updater ID
  optional uint32 deleted_by = 102 [json_name = "deletedBy", (gnostic.openapi.v3.property) = {description: "Deleter user ID"}]; // Deleter user ID

  optional google.protobuf.Timestamp created_at = 200 [json_name = "createdAt", (gnostic.openapi.v3.property) = {description: "Created time"}];// Created time
  optional google.protobuf.Timestamp updated_at = 201 [json_name = "updatedAt", (gnostic.openapi.v3.property) = {description: "Updated time"}];// Updated time
  optional google.protobuf.Timestamp deleted_at = 202 [json_name = "deletedAt", (gnostic.openapi.v3.property) = {description: "Deleted time"}];// Deleted time
}
