syntax = "proto3";

package user.service.v1;

import "gnostic/openapi/v3/annotations.proto";
import "google/protobuf/empty.proto";
import "google/protobuf/timestamp.proto";
import "google/protobuf/field_mask.proto";

import "pagination/v1/pagination.proto";

// Role service
service RoleService {
  // Query role list
  rpc List (pagination.PagingRequest) returns (ListRoleResponse) {}

  // Query role details
  rpc Get (GetRoleRequest) returns (Role) {}

  // Create role
  rpc Create (CreateRoleRequest) returns (google.protobuf.Empty) {}

  // Update role
  rpc Update (UpdateRoleRequest) returns (google.protobuf.Empty) {}

  // Delete role
  rpc Delete (DeleteRoleRequest) returns (google.protobuf.Empty) {}

  // Batch create roles
  rpc BatchCreate (BatchCreateRolesRequest) returns (BatchCreateRolesResponse) {}

  // Get role codes by role ID list
  rpc GetRoleCodesByRoleIds(GetRoleCodesByRoleIdsRequest) returns (GetRoleCodesByRoleIdsResponse) {}

  // Get roles by role code list
  rpc GetRolesByRoleCodes(GetRolesByRoleCodesRequest) returns (ListRoleResponse) {}

  // Get roles by role ID list
  rpc GetRolesByRoleIds(GetRolesByRoleIdsRequest) returns (ListRoleResponse) {}
}

// Role
message Role {
  // Role status
  enum Status {
    OFF = 0;         // Disabled
    ON = 1;          // Enabled
  }

  optional uint32 id = 1 [
    json_name = "id",
    (gnostic.openapi.v3.property) = {description: "Role ID"}
  ];  // Role ID

  optional string name = 2 [
    json_name = "name",
    (gnostic.openapi.v3.property) = {description: "Role name"}
  ];  // Role name

  optional string code = 3 [
    json_name = "code",
    (gnostic.openapi.v3.property) = {
      description: "Role identifier code"
      example: {yaml: "platform:admin, tenant:admin1"}
    }
  ];  // Role identifier code (e.g., ADMIN, VIEWER)

  optional uint32 sort_order = 4 [
    json_name = "sortOrder",
    (gnostic.openapi.v3.property) = {description: "Sort order, smaller values appear first"}
  ];  // Sort order, smaller values appear first

  optional Status status = 5 [
    json_name = "status",
    (gnostic.openapi.v3.property) = {description: "Status"}
  ];  // Status

  optional string description = 6 [
    json_name = "description",
    (gnostic.openapi.v3.property) = {description: "Description"}
  ];  // Description

  optional bool is_protected = 7 [
    json_name = "isProtected",
    (gnostic.openapi.v3.property) = {description: "Protected role, only platform admin can modify"}
  ];  // Protected role, only platform admin can modify

  optional bool is_system = 8 [
    json_name = "isSystem",
    (gnostic.openapi.v3.property) = {description: "System built-in role, only platform admin can modify"}
  ];  // System built-in role

  repeated uint32 permissions = 10 [
    json_name = "permissions",
    (gnostic.openapi.v3.property) = {description: "List of bound permission IDs"}
  ]; // List of bound permission IDs

  optional uint32 tenant_id = 40 [
    json_name = "tenantId",
    (gnostic.openapi.v3.property) = {description: "Tenant ID, 0 represents system global role"}
  ];  // Tenant ID, 0 represents system global role
  optional string tenant_name = 41 [
    json_name = "tenantName",
    (gnostic.openapi.v3.property) = {description: "Tenant name"}
  ];  // Tenant name

  optional uint32 created_by = 100 [json_name = "createdBy", (gnostic.openapi.v3.property) = {description: "Creator ID"}]; // Creator ID
  optional uint32 updated_by = 101 [json_name = "updatedBy", (gnostic.openapi.v3.property) = {description: "Updater ID"}]; // Updater ID
  optional uint32 deleted_by = 102 [json_name = "deletedBy", (gnostic.openapi.v3.property) = {description: "Deleter user ID"}]; // Deleter user ID

  optional google.protobuf.Timestamp created_at = 200 [json_name = "createdAt", (gnostic.openapi.v3.property) = {description: "Created time"}];// Created time
  optional google.protobuf.Timestamp updated_at = 201 [json_name = "updatedAt", (gnostic.openapi.v3.property) = {description: "Updated time"}];// Updated time
  optional google.protobuf.Timestamp deleted_at = 202 [json_name = "deletedAt", (gnostic.openapi.v3.property) = {description: "Deleted time"}];// Deleted time
}

// Role list - Response
message ListRoleResponse {
  repeated Role items = 1;
  uint64 total = 2;
}

// Role data - Request
message GetRoleRequest {
  oneof query_by {
    uint32 id = 1 [
      (gnostic.openapi.v3.property) = {description: "ID", read_only: true},
      json_name = "id"
    ]; // ID

    string name = 2 [
      (gnostic.openapi.v3.property) = {description: "Name", read_only: true},
      json_name = "name"
    ]; // Name

    string code = 3 [
      (gnostic.openapi.v3.property) = {description: "Unique code", read_only: true},
      json_name = "code"
    ]; // Unique code
  }

  optional google.protobuf.FieldMask view_mask = 100 [
    json_name = "viewMask",
    (gnostic.openapi.v3.property) = {
      description: "View field mask for controlling returned fields"
    }
  ]; // View field mask for controlling returned fields
}

// Create role - Request
message CreateRoleRequest {
  Role data = 1;
}

// Update role - Request
message UpdateRoleRequest {
  uint32 id = 1;

  Role data = 2;

  google.protobuf.FieldMask update_mask = 3 [
    (gnostic.openapi.v3.property) = {
      description: "List of fields to update",
      example: {yaml : "id,realname,username"}
    },
    json_name = "updateMask"
  ]; // List of fields to update

  optional bool allow_missing = 4 [
    (gnostic.openapi.v3.property) = {description: "If set to true and the resource does not exist, it will be created (inserted), and the `updateMask` field will be ignored."},
    json_name = "allowMissing"
  ]; // If set to true and the resource does not exist, it will be created (inserted), and the `updateMask` field will be ignored.
}

// Delete role - Request
message DeleteRoleRequest {
  uint32 id = 1;
}

message BatchCreateRolesRequest {
  repeated Role data = 1;
}
message BatchCreateRolesResponse {
  repeated int32 created_ids = 1 [
    json_name = "createdIds",
    (gnostic.openapi.v3.property) = {
      description: "List of successfully created role IDs"
    }
  ]; // List of successfully created role IDs
}

message GetRoleCodesByRoleIdsRequest {
  repeated uint32 role_ids = 1 [json_name = "roleIds", (gnostic.openapi.v3.property) = {description: "Role ID list"}];
}
message GetRoleCodesByRoleIdsResponse {
  repeated string role_codes = 1 [json_name = "roleCodes", (gnostic.openapi.v3.property) = {description: "Role code list"}];
}

message GetRolesByRoleCodesRequest {
  repeated string role_codes = 1 [json_name = "roleCodes", (gnostic.openapi.v3.property) = {description: "Role code list"}];

  optional google.protobuf.FieldMask view_mask = 100 [
    json_name = "viewMask",
    (gnostic.openapi.v3.property) = {
      description: "View field mask for controlling returned fields"
    }
  ]; // View field mask for controlling returned fields
}

message GetRolesByRoleIdsRequest {
  repeated uint32 role_ids = 1 [json_name = "roleIds", (gnostic.openapi.v3.property) = {description: "Role ID list"}];

  optional google.protobuf.FieldMask view_mask = 100 [
    json_name = "viewMask",
    (gnostic.openapi.v3.property) = {
      description: "View field mask for controlling returned fields"
    }
  ]; // View field mask for controlling returned fields
}
